# omnimcp-dataframe

./: .gitignore  README.md  pyproject.toml  test_modifications.py
examples/: basic_usage.py  test_fix.py  unified_interface_demo.py
omnimcp_dataframe/: __init__.py  models.py  prompts.py  server.py  tool_registry.py  unified.py  utils.py  version.py
tests/: basic_usage.py  simple_test.py  test_explode.py  test_explode_json.py  test_explode_struct.py
